--- a/photo-gallery/package.json
+++ b/photo-gallery/package.json
@@ -27,7 +27,9 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.8.29",
+    "angular-formio": "3.9.8",
+    "formiojs": "3.11.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.13.8",
